spec/e2e/number/trailing_dot.lit
# error: [line 2] Error at ";": I was expecting a property name after '.'.
123.;
